[gd_scene load_steps=5 format=3 uid="uid://b2nqxrhy6q8hm"]

[ext_resource type="Script" path="res://src/ui/hud/game_hud.gd" id="1_game_hud"]
[ext_resource type="Texture2D" path="res://assets/graphics/icons/ui.png" id="2_ui_texture"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health"]
bg_color = Color(0.8, 0.2, 0.2, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_experience"]
bg_color = Color(0.2, 0.6, 1.0, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_game_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -80.0
offset_right = 630.0
offset_bottom = -10.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="TopBar"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_health")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="TopBar/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExperienceBar" type="ProgressBar" parent="TopBar"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_experience")
max_value = 100.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Lv.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillCountLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "击杀: 0"
horizontal_alignment = 1
vertical_alignment = 1